6.4 Added shape package and ShapeColectorTestSuite